# SongGuard

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  HANDOFF.md  PLAN.md  README.md  alembic.ini  deploy.sh  docker-compose.yml  pyproject.toml  rollback.sh  runbook.md  update.sh
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_m1_catalog.py  0003_m2_detection.py  0004_m3_bot.py  0006_m6_takedown.py  0007_licensed_content.py  0008_whitelist_channel_url.py  0009_track_muted.py  44d4d95703c6_add_retry_count_to_scan_jobs.py  f3404a51c4a8_m4_scheduler.py
app/: __init__.py  config.py  db.py  health.py  main.py  redis_client.py
app/auth/: deps.py  service.py
app/bot/: cards.py  main.py
app/importers/: base.py  itunes.py  spotify.py
app/models/: __init__.py  artist.py  audit.py  detection.py  notify.py  system.py  track.py  user.py
app/scanners/: base.py  itunes_scan.py  (+2 more)
docs/: backup-restore.md
nginx/: nginx.conf
scripts/: backup.sh  promote.py  restore.sh  seed.py  verify_http.py  verify_m1.py  verify_m2.py  verify_m4.py  verify_m5.py  verify_m6.py  verify_spotify.py
tests/: conftest.py  test_ai_judge.py  test_apple_label.py  test_auth_invite.py  test_bot_cards.py  test_budgeter.py  test_detection_cassette.py  test_health.py  test_images.py  test_importer_itunes.py  test_m6_golden.py  test_normalize.py  test_notify.py  test_notify_integration.py  test_ops.py  test_panako_audio.py  test_recheck.py  test_retention.py  test_scheduler.py  test_scoring.py  test_settings_whitelist.py  test_takedown.py  test_youtube_scan.py
(+48 files in other folders)
