[project]
name = "trackguard"
version = "0.1.0"
description = "Music piracy detection & takedown-assist system"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic-settings>=2.6",
    "redis>=5.2",
    "arq>=0.26",
    "aiogram>=3.15",
    "httpx>=0.28",
    "jinja2>=3.1",
    "itsdangerous>=2.2",
    "python-multipart>=0.0.12",
    "pillow>=11.0",
    "numpy>=2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Migrations are dense, machine-style column definitions; long lines are fine.
"alembic/versions/*" = ["E501"]
# Verification scripts favor readable console output over line length.
"scripts/verify_*.py" = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI dependency-injection calls are the idiomatic default-argument pattern.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.Form",
    "fastapi.File",
]

[tool.uv]
package = false
